fix: correctly use Role for namespaced RBAC example

--- a/04-built-in-resource-types/RBAC/RoleBinding.pod-reader.yaml
+++ b/04-built-in-resource-types/RBAC/RoleBinding.pod-reader.yaml
@@ -4,7 +4,7 @@ metadata:
   name: pod-reader
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
+  kind: Role
   name: pod-reader
 subjects:
   - kind: ServiceAccount
