--- a/04-built-in-resource-types/Pod/Pod.nginx-better.yaml
+++ b/04-built-in-resource-types/Pod/Pod.nginx-better.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx-better
-  namespace: non-default
+  namespace: 04--pod
 spec:
   containers:
     - name: nginx
@@ -17,10 +17,10 @@ spec:
           port: 8080
       resources:
         limits:
-          memory: "500Mi"
+          memory: "50Mi"
         requests:
-          memory: "500Mi"
-          cpu: "1"
+          memory: "50Mi"
+          cpu: "250m"
       securityContext:
         allowPrivilegeEscalation: false
         privileged: false
