--- a/04-built-in-resource-types/ReplicaSet/ReplicaSet.nginx-minimal.yaml
+++ b/04-built-in-resource-types/ReplicaSet/ReplicaSet.nginx-minimal.yaml
@@ -6,11 +6,11 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      app: nginx
+      app: nginx-minimal
   template:
     metadata:
       labels:
-        app: nginx
+        app: nginx-minimal
     spec:
       containers:
         - name: nginx
