--- a/04-built-in-resource-types/Deployment/Deployment.nginx-better.yaml
+++ b/04-built-in-resource-types/Deployment/Deployment.nginx-better.yaml
@@ -2,18 +2,18 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-better
-  namespace: non-default
+  namespace: 04--deployment
   labels:
-    app: nginx
+    app: nginx-better
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: nginx
+      app: nginx-better
   template:
     metadata:
       labels:
-        app: nginx
+        app: nginx-better
     spec:
       containers:
         - name: nginx
@@ -27,10 +27,10 @@ spec:
               port: 8080
           resources:
             limits:
-              memory: "500Mi"
+              memory: "50Mi"
             requests:
-              memory: "500Mi"
-              cpu: "1"
+              memory: "50Mi"
+              cpu: "250m"
           securityContext:
             allowPrivilegeEscalation: false
             privileged: false
