update daemonset examples

--- a/04-built-in-resource-types/DaemonSet/DaemonSet.fluentd-minimal.yaml
+++ b/04-built-in-resource-types/DaemonSet/DaemonSet.fluentd-minimal.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: fluentd-minimal
+  namespace: 04--daemonset
 spec:
   selector:
     matchLabels:
