update secret examples

--- a/04-built-in-resource-types/Secret/Pod.secret-example.yaml
+++ b/04-built-in-resource-types/Secret/Pod.secret-example.yaml
@@ -15,6 +15,10 @@ spec:
             secretKeyRef:
               name: base64-data
               key: foo
+  imagePullSecrets:
+    # Not necessary since example uses a public image, but including to show how
+    # you would use a registry credential secret to access a private image
+    - name: dockerconfigjson
   volumes:
     - name: secret-base64-data
       secret:
