--- a/04-built-in-resource-types/Ingress/Ingress.minimal.yaml
+++ b/04-built-in-resource-types/Ingress/Ingress.minimal.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: nginx-ingress
+  name: minimal
 spec:
   ingressClassName: nginx
   rules:
