--- a/04-built-in-resource-types/Service/Service.nginx-loadbalancer.yaml
+++ b/04-built-in-resource-types/Service/Service.nginx-loadbalancer.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: LoadBalancer # Will only work if cluster is configured to provision one from an external source (e.g. cloud provider)
   selector:
-    app: nginx-pod-label
+    baz: pod-label
   ports:
     - protocol: TCP
       port: 80 # Port the service is listening on
