--- a/04-built-in-resource-types/Service/Service.nginx-nodeport.yaml
+++ b/04-built-in-resource-types/Service/Service.nginx-nodeport.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: nginx-pod-label
+    baz: pod-label
   ports:
     - protocol: TCP
       port: 80 # Port the service is listening on
