--- a/04-built-in-resource-types/PersistentVolume/civo/Pod.dynamic-pvc-civo.yaml
+++ b/04-built-in-resource-types/PersistentVolume/civo/Pod.dynamic-pvc-civo.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: manual-pv-and-pvc
+  name: dynamic-pv-civo
 spec:
   containers:
     - name: nginx
@@ -12,4 +12,4 @@ spec:
   volumes:
     - name: storage
       persistentVolumeClaim:
-        claimName: manual-pv
+        claimName: dynamic-pv-civo
