--- a/04-built-in-resource-types/PersistentVolume/kind/PersistentVolumeClaim.dynamic-pv-kind.yaml
+++ b/04-built-in-resource-types/PersistentVolume/kind/PersistentVolumeClaim.dynamic-pv-kind.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: dynamic-pv
+  name: dynamic-pv-kind
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 100Mi
-  # storageClassName: local-storage
   storageClassName: standard
