add rbac examples

--- a/04-built-in-resource-types/RBAC/Job.namespaced-pod-reader-succeed.yaml
+++ b/04-built-in-resource-types/RBAC/Job.namespaced-pod-reader-succeed.yaml
@@ -9,7 +9,7 @@ spec:
       containers:
         - name: kubectl
           image: cgr.dev/chainguard/kubectl
-          args: ["get", "pods", "-n", "default"]
+          args: ["get", "pods", "-n", "04--rbac"]
       serviceAccountName: namespaced-pod-reader
       restartPolicy: Never
   backoffLimit: 1
