--- a/04-built-in-resource-types/GatewayAPI/GatewayClass.kong.yaml
+++ b/04-built-in-resource-types/GatewayAPI/GatewayClass.kong.yaml
@@ -1,4 +1,4 @@
-apiVersion: gateway.networking.k8s.io/v1
+apiVersion: gateway.networking.k8s.io/v1beta1
 kind: GatewayClass
 metadata:
   name: kong
