--- a/04-built-in-resource-types/GatewayAPI/HTTPRoute.kong.yaml
+++ b/04-built-in-resource-types/GatewayAPI/HTTPRoute.kong.yaml
@@ -1,10 +1,12 @@
-apiVersion: gateway.networking.k8s.io/v1
+apiVersion: gateway.networking.k8s.io/v1beta1
 kind: HTTPRoute
 metadata:
-  name: echo
+  name: kong
 spec:
   parentRefs:
     - name: kong
+  hostnames:
+    - "gateway-example-kong.com"
   rules:
     - matches:
         - path:
