add gke ingress example

--- a/04-built-in-resource-types/Ingress/Ingress.minimal-nginx.yaml
+++ b/04-built-in-resource-types/Ingress/Ingress.minimal-nginx.yaml
@@ -1,15 +1,18 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: minimal
+  name: minimal-nginx
+  # Can use
+  # annotations:
+  #   kubernetes.io/ingress.class: "nginx"
 spec:
   ingressClassName: nginx
   rules:
-    - host: "civo-ingress-example.com"
+    - host: "ingress-example-nginx.com"
       http:
         paths:
           - path: /
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: nginx-clusterip
