--- a/04-built-in-resource-types/PersistentVolume/civo/StatefulSet.individual-pvcs-civo.yaml
+++ b/04-built-in-resource-types/PersistentVolume/civo/StatefulSet.individual-pvcs-civo.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: individual-pvcs-kind
+  name: individual-pvcs-civo
 spec:
   serviceName: "nginx"
   replicas: 2
   selector:
     matchLabels:
-      app: nginx
+      app: nginx-sts-civo
   template:
     metadata:
       labels:
-        app: nginx
+        app: nginx-sts-civo
     spec:
       containers:
         - name: nginx
@@ -38,4 +38,4 @@ metadata:
 spec:
   clusterIP: None
   selector:
-    app: nginx
+    app: nginx-sts-civo
