--- a/06-demo-application/load-generator-python/Taskfile.yaml
+++ b/06-demo-application/load-generator-python/Taskfile.yaml
@@ -1,14 +1,14 @@
 version: "3"
 
 vars:
-  IMAGE_REPO: localhost:5000/devops-directive-docker-course-react-client
+  IMAGE_REPO: localhost:5000/devops-directive-kubernetes-course-load-generator-python
   IMAGE_TAG: foobarbaz
 
 tasks:
   build-container-image:
     desc: Build container image
     cmds:
-      - docker build -t {{.IMAGE_TAG}} .
+      - docker build -t sidpalas/devops-directive-kubernetes-course-load-generator-python:{{.IMAGE_TAG}} .
 
   build-container-image-multi-arch:
     desc: Build multi-arch container image
