update build taskfile env vars to include dockerhub option

--- a/06-demo-application/api-golang/Taskfile.yaml
+++ b/06-demo-application/api-golang/Taskfile.yaml
@@ -3,6 +3,7 @@ version: "3"
 vars:
   DATABASE_URL: "postgres://postgres:foobarbaz@localhost:5432/postgres"
   IMAGE_REPO: localhost:5000/devops-directive-docker-course-api-golang
+  # IMAGE_REPO: sidpalas/devops-directive-docker-course-api-golang
   IMAGE_TAG: foobarbaz
 
 tasks:
