--- a/06-demo-application/api-node/Taskfile.yaml
+++ b/06-demo-application/api-node/Taskfile.yaml
@@ -3,7 +3,8 @@ version: "3"
 vars:
   DATABASE_URL: "postgres://postgres:foobarbaz@localhost:5432/postgres"
   IMAGE_REPO: localhost:5000/devops-directive-docker-course-api-node
-  IMAGE_TAG: foobarbazbing
+  # IMAGE_REPO: sidpalas/devops-directive-docker-course-api-node
+  IMAGE_TAG: foobarbaz
 
 tasks:
   build-container-image:
