--- a/07-deploying-demo-application/api-golang/Deployment.yaml
+++ b/07-deploying-demo-application/api-golang/Deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: api-golang
-          image: sidpalas/devops-directive-docker-course-api-golang:8
+          image: sidpalas/devops-directive-docker-course-api-golang:foobarbaz
           env:
             - name: PORT
               value: "8080"
