--- a/07-deploying-demo-application/load-generator-python/ConfigMap.yaml
+++ b/07-deploying-demo-application/load-generator-python/ConfigMap.yaml
@@ -1,8 +1,10 @@
+# 🚨 This is currently unused (for example purposes)
+# The env var is defined directly in the deployment
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: load-generator-config
 data:
-  API_URL: api-node.default.svc.cluster.local
-  # API_URL: api-golang.default.svc.cluster.local
+  API_URL: http://api-node.demo-app.svc.cluster.local:3000
+  # API_URL: http://api-golang.demo-app.svc.cluster.local:8080
   DELAY_MS: "100"
