--- a/07-deploying-demo-application/load-generator-python/Deployment.yaml
+++ b/07-deploying-demo-application/load-generator-python/Deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: load-generator-python
+  namespace: demo-app
   labels:
     app: load-generator-python
 spec:
