--- a/06-demo-application/client-react/nginx.conf
+++ b/06-demo-application/client-react/nginx.conf
@@ -1,9 +1,6 @@
 server {
   listen 8080;
   
-  # Docker internal dns server
-  resolver 127.0.0.11;
-  
   location /ping {
         access_log off;
         add_header 'Content-Type' 'text/plain';
@@ -15,8 +12,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_http_version 1.1;
 
-        set $api_golang_upstream http://api-golang:8080/;
-        proxy_pass $api_golang_upstream;
+        rewrite ^/api-golang/(.*) /$1 break;
+        proxy_pass http://api-golang:8000/;
   }
   location /api/node/ {
         proxy_set_header X-Forwarded-Host $host;
@@ -24,8 +21,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_http_version 1.1;
 
-        set $api_node_upstream http://api-node:3000/;
-        proxy_pass $api_node_upstream;
+        rewrite ^/api/node/(.*) /$1 break;
+        proxy_pass http://api-node:3000/;
   }
   location / {
     root /usr/share/nginx/html;
