--- a/07-deploying-demo-application/common/Taskfile.yaml
+++ b/07-deploying-demo-application/common/Taskfile.yaml
@@ -1,14 +1,19 @@
 version: "3"
 
 tasks:
+  apply-namespace:
+    desc: "Apply Kubernetes Namespace"
+    cmds:
+      - kubectl apply -f Namespace.yaml
+      - kubens demo-app
+
   deploy-traefik:
     desc: "Deploy Traefik using Helm"
     cmds:
       - helm repo add traefik https://traefik.github.io/charts
       - helm upgrade --install -n traefik --create-namespace traefik traefik/traefik --version 20.8.0
 
-  apply-ingress-config:
-    desc: "Deploy IngressRoute and Traefik middleware"
+  apply-traefik-middleware:
+    desc: "Deploy Traefik middleware"
     cmds:
-      - "kubectl apply -f IngressRoute.yaml"
       - "kubectl apply -f Middleware.yaml"
