--- a/07-deploying-demo-application/postgresql/Taskfile.yaml
+++ b/07-deploying-demo-application/postgresql/Taskfile.yaml
@@ -1,7 +1,7 @@
 version: "3"
 
 tasks:
-  deploy-postgres:
+  install-postgres:
     desc: "Deploy PostgreSQL using Helm"
     cmds:
       - helm repo add bitnami https://charts.bitnami.com/bitnami
